修复启动时不加相关vm选项无法启动问题